# kreate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRDPARTY.md  build.gradle.kts  detekt.yaml  gradle.properties  settings.gradle.kts  trivy-secret.yaml
.github/: dependabot.yml  writerside.yml
.github/workflows/: build.yml  writerside.yml
.junie/: AGENTS.md
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: starter-topic.md
docs/: d.tree  writerside.cfg
docs/cfg/: buildprofiles.xml
docs/topics/: Build-Pipeline.md  C-Interopration.md  Documentation-Examples.md  Explicit-API.md  Getting-Started.md  Java-Version.md  Metadata.md  Overview.md  POM-Conbfiguration.md  Publishing-Overview.md  Testing-Example.md  Testing-Multiplatfrom.md  Versioning.md  c-interop-configuration.md  c-interop-troubleshooting.md  c-interop.md  getting-started.md  jni-support.md  overview.md  platform-configuration.md  project-configuration.md  publishing.md  testing-and-docs.md
docs/topics/platform/: Platform-Java-Version.md  Platform-Warning-As-Errors.md
docs/topics/project/: Project-Metadata.md  Project-Version-Resolution.md
docs/topics/trivy/: Trivy-Configuration-Reference.md  Trivy-License-Scan.md  Trivy-Overview.md  Trivy-Secret-Scan.md  (+1 more)
example/: build.gradle.kts
example/jni/example/: CMakeLists.txt
example/jni/example/src/: example.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kreate-plugin/: build.gradle.kts  settings.gradle.kts
kreate-plugin/buildSrc/: build.gradle.kts
(+184 files in other folders)
